[package]
name = "url-shorten"
version = "0.1.0"
edition = "2021"
authors = [ "Raiga SASAYAMA <tkyt7619@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum  = { version = "0.7", default-features = false, features = ["json"]}
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "js"]}
serde = "1.0.209"
worker = "0.3.4"
worker-macros = "0.3.4"
axum-wasm-macros = "^0.1.0"
futures = "0.3.29"
axum-macros = "0.4.1"
oneshot = "0.1.8"
serde_json = "1.0.127"

[dev-dependencies]
wasm-bindgen-test = "^0.3.34"
wasm-bindgen-futures = "^0.4.34"
wasm-bindgen = "^0.2.84"
tower-service = "^0.3.2"
